@@ -1,5 +1,7 @@
 package com.adidyk;
 
+import java.util.Iterator;
+
 public class StartUi {
 
     // main - its only for compile jar file
@@ -21,11 +23,27 @@ public class StartUi {
         list.add(new User("7", "Sabrina", 17));
 
         System.out.println();
-        System.out.println(list.getSize());
+        System.out.println(list.size());
 
-        System.out.println(list.getFirst());
-        System.out.println(list.getLast());
-        System.out.println(list.get(4));
+//        System.out.println(list.getFirst());
+//        System.out.println(list.getLast());
+
+        System.out.println("Index = 0 :" +list.get(0));
+        System.out.println("Index = 1 :" +list.get(1));
+        System.out.println("Index = 2 :" +list.get(2));
+        System.out.println("Index = 3 :" +list.get(3));
+        System.out.println("Index = 4 :" +list.get(4));
+        System.out.println("Index = 5 :" +list.get(5));
+        System.out.println("Index = 6 :" +list.get(6));
+        System.out.println("Index = 7 :" +list.get(7));
+
+        Iterator<User> it = list.iterator();
+
+        System.out.println("Its output forEch: ");
+        for (User item : list) {
+            System.out.println(item);
+        }
+
 
 
 
